--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files":["App/Helpers/Generals.php"]
     },
     "autoload-dev": {
         "psr-4": {
